[package]
name = "binwrite"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
repository = "https://github.com/jam1garner/binwrite"
license = "MIT"
description = "A Rust crate for helping write structs as binary data using ✨macro magic✨"

[dependencies]
byteorder = "1.3.2"
paste = "0.1.6"

