[package]
name = "binwrite"
version = "0.1.5"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
repository = "https://github.com/jam1garner/binwrite"
license = "MIT"
description = "A Rust crate for helping write structs as binary data using ✨macro magic✨"
readme = "README.md"
documentation = "https://docs.rs/binwrite"

[dependencies]
byteorder = "^1.3.2"
paste = "^0.1.6"
binwrite_derive = "^0.1.2"

