[package]
name = "binwrite"
version = "0.2.1"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
repository = "https://github.com/jam1garner/binwrite"
license = "MIT"
description = "A Rust crate for helping write structs as binary data using ✨macro magic✨"
readme = "README.md"
documentation = "https://docs.rs/binwrite"

[dependencies]
paste = "^0.1.6"
binwrite_derive = { path = "../binwrite_derive" }#"^0.2"

